--- a/lib/project/runoptionswidgetbase.ui
+++ b/lib/project/runoptionswidgetbase.ui
@@ -49,21 +49,12 @@
                         <number>1</number>
                     </property>
                 </widget>
-                <widget class="QLineEdit" row="1" column="2" rowspan="1" colspan="2">
+                <widget class="QLabel" row="1" column="2" rowspan="1" colspan="2">
                     <property name="name">
-                        <cstring>buildDirectory_edit</cstring>
+                        <cstring>buildDirectory_label</cstring>
                     </property>
-                    <property name="enabled">
-                        <bool>false</bool>
-                    </property>
-                    <property name="frameShape">
-                        <enum>NoFrame</enum>
-                    </property>
-                    <property name="frameShadow">
-                        <enum>Sunken</enum>
-                    </property>
-                    <property name="lineWidth">
-                        <number>0</number>
+                    <property name="buddy" stdset="0">
+                        <cstring>buildDirectory_radio</cstring>
                     </property>
                 </widget>
                 <widget class="QRadioButton" row="2" column="0" rowspan="1" colspan="1">
@@ -126,15 +117,12 @@
                         <cstring>mainprogram_edit</cstring>
                     </property>
                 </widget>
-                <widget class="QLineEdit" row="0" column="1" rowspan="1" colspan="3">
+                <widget class="QLabel" row="0" column="1" rowspan="1" colspan="3">
                     <property name="name">
-                        <cstring>mainProgram_relativeness_edit</cstring>
+                        <cstring>mainProgram_relativeness_label</cstring>
                     </property>
-                    <property name="enabled">
-                        <bool>false</bool>
-                    </property>
-                    <property name="frameShape">
-                        <enum>NoFrame</enum>
+                    <property name="buddy" stdset="0">
+                        <cstring>mainprogram_edit</cstring>
                     </property>
                 </widget>
                 <widget class="QLineEdit" row="1" column="0" rowspan="1" colspan="3">
@@ -206,7 +194,7 @@
                         <string>Automatically compile before execution</string>
                     </property>
                     <property name="toolTip" stdset="0">
-                        <string>If the program in not update with the source code, compile it before starting it's execution</string>
+                        <string>If the program is not up-to-date with the source code, compile it before starting it's execution</string>
                     </property>
                 </widget>
             </hbox>
