--- a/parts/cvsservice/logformbase.ui
+++ b/parts/cvsservice/logformbase.ui
@@ -31,6 +31,12 @@
                     <verstretch>0</verstretch>
                 </sizepolicy>
             </property>
+            <property name="minimumSize">
+                <size>
+                    <width>640</width>
+                    <height>480</height>
+                </size>
+            </property>
             <property name="text">
                 <string></string>
             </property>
