--- a/parts/cvsservice/cvsoptionswidgetbase.ui
+++ b/parts/cvsservice/cvsoptionswidgetbase.ui
@@ -8,8 +8,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>448</width>
-            <height>408</height>
+            <width>445</width>
+            <height>377</height>
         </rect>
     </property>
     <property name="caption">
@@ -19,132 +19,187 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <widget class="QLabel">
+        <widget class="QGroupBox">
             <property name="name">
-                <cstring>m_cvsLabel</cstring>
+                <cstring>groupBox4</cstring>
             </property>
-            <property name="text">
-                <string>CVS options:</string>
+            <property name="title">
+                <string>Common settings</string>
             </property>
+            <vbox>
+                <property name="name">
+                    <cstring>unnamed</cstring>
+                </property>
+                <widget class="QLabel">
+                    <property name="name">
+                        <cstring>m_rshLabel</cstring>
+                    </property>
+                    <property name="sizePolicy">
+                        <sizepolicy>
+                            <hsizetype>5</hsizetype>
+                            <vsizetype>0</vsizetype>
+                            <horstretch>0</horstretch>
+                            <verstretch>0</verstretch>
+                        </sizepolicy>
+                    </property>
+                    <property name="text">
+                        <string>Remote shell (CVS_RSH environment variable):</string>
+                    </property>
+                </widget>
+                <widget class="QLineEdit">
+                    <property name="name">
+                        <cstring>cvsRshEnvVarEdit</cstring>
+                    </property>
+                    <property name="toolTip" stdset="0">
+                        <string>sets the CVS_RSH variable</string>
+                    </property>
+                    <property name="whatsThis" stdset="0">
+                        <string>Set this option to "ssh" to use ssh as remote shell for CVS. Note that you need password-less login (see the ssh howtos how to generate a public/private key pair) otherwise CVS will just hang forever.</string>
+                    </property>
+                </widget>
+            </vbox>
         </widget>
-        <widget class="QLineEdit">
+        <widget class="QGroupBox">
             <property name="name">
-                <cstring>m_cvsEdit</cstring>
+                <cstring>groupBox1</cstring>
             </property>
+            <property name="title">
+                <string>When updating </string>
+            </property>
+            <vbox>
+                <property name="name">
+                    <cstring>unnamed</cstring>
+                </property>
+                <widget class="QCheckBox">
+                    <property name="name">
+                        <cstring>createNewDirWhenUpdateCheck</cstring>
+                    </property>
+                    <property name="text">
+                        <string>create new directories (if any)</string>
+                    </property>
+                </widget>
+                <widget class="QCheckBox">
+                    <property name="name">
+                        <cstring>pruneEmptyDirWhenUpdateCheck</cstring>
+                    </property>
+                    <property name="text">
+                        <string>prune empty directories</string>
+                    </property>
+                </widget>
+                <widget class="QCheckBox">
+                    <property name="name">
+                        <cstring>recursiveWhenUpdateCheck</cstring>
+                    </property>
+                    <property name="text">
+                        <string>update subdirectories too</string>
+                    </property>
+                </widget>
+            </vbox>
         </widget>
-        <widget class="QLabel">
+        <widget class="QGroupBox">
             <property name="name">
-                <cstring>m_commitLabel</cstring>
+                <cstring>groupBox2</cstring>
             </property>
-            <property name="text">
-                <string>Commit options:</string>
+            <property name="title">
+                <string>When committing / removing</string>
             </property>
+            <vbox>
+                <property name="name">
+                    <cstring>unnamed</cstring>
+                </property>
+                <widget class="QCheckBox">
+                    <property name="name">
+                        <cstring>recursiveWhenCommitRemoveCheck</cstring>
+                    </property>
+                    <property name="text">
+                        <string>be recursive</string>
+                    </property>
+                </widget>
+            </vbox>
         </widget>
-        <widget class="QLineEdit">
+        <widget class="QGroupBox">
             <property name="name">
-                <cstring>m_commitEdit</cstring>
+                <cstring>groupBox3</cstring>
             </property>
-        </widget>
-        <widget class="QLabel">
-            <property name="name">
-                <cstring>m_updateLabel</cstring>
+            <property name="title">
+                <string>When creating a diff</string>
             </property>
-            <property name="text">
-                <string>Update options:</string>
-            </property>
-        </widget>
-        <widget class="QLineEdit">
-            <property name="name">
-                <cstring>m_updateEdit</cstring>
-            </property>
-        </widget>
-        <widget class="QLabel">
-            <property name="name">
-                <cstring>m_addLabel</cstring>
-            </property>
-            <property name="text">
-                <string>Add options:</string>
-            </property>
-        </widget>
-        <widget class="QLineEdit">
-            <property name="name">
-                <cstring>m_addEdit</cstring>
-            </property>
-        </widget>
-        <widget class="QLabel">
-            <property name="name">
-                <cstring>m_removeLabel</cstring>
-            </property>
-            <property name="text">
-                <string>Remove options:</string>
-            </property>
-        </widget>
-        <widget class="QLineEdit">
-            <property name="name">
-                <cstring>m_removeEdit</cstring>
-            </property>
-        </widget>
-        <widget class="QLabel">
-            <property name="name">
-                <cstring>m_diffLabel</cstring>
-            </property>
-            <property name="text">
-                <string>Diff options:</string>
-            </property>
-        </widget>
-        <widget class="QLineEdit">
-            <property name="name">
-                <cstring>m_diffEdit</cstring>
-            </property>
-            <property name="sizePolicy">
-                <sizepolicy>
-                    <hsizetype>7</hsizetype>
-                    <vsizetype>0</vsizetype>
-                    <horstretch>0</horstretch>
-                    <verstretch>0</verstretch>
-                </sizepolicy>
-            </property>
-        </widget>
-        <widget class="QLabel">
-            <property name="name">
-                <cstring>m_logLabel</cstring>
-            </property>
-            <property name="text">
-                <string>Log options:</string>
-            </property>
-        </widget>
-        <widget class="QLineEdit">
-            <property name="name">
-                <cstring>m_logEdit</cstring>
-            </property>
-        </widget>
-        <widget class="QLabel">
-            <property name="name">
-                <cstring>m_rshLabel</cstring>
-            </property>
-            <property name="text">
-                <string>Remote shell (CVS_RSH):</string>
-            </property>
-        </widget>
-        <widget class="QLineEdit">
-            <property name="name">
-                <cstring>m_rshEdit</cstring>
-            </property>
-            <property name="toolTip" stdset="0">
-                <string>sets the CVS_RSH variable</string>
-            </property>
-            <property name="whatsThis" stdset="0">
-                <string>Set this option to "ssh" to use ssh as remote shell for CVS. Note that you need password-less login (see the ssh howtos how to generate a public/private key pair) otherwise CVS will just hang forever.</string>
-            </property>
+            <grid>
+                <property name="name">
+                    <cstring>unnamed</cstring>
+                </property>
+                <widget class="QLineEdit" row="1" column="0">
+                    <property name="name">
+                        <cstring>diffOptionsEdit</cstring>
+                    </property>
+                    <property name="sizePolicy">
+                        <sizepolicy>
+                            <hsizetype>7</hsizetype>
+                            <vsizetype>0</vsizetype>
+                            <horstretch>0</horstretch>
+                            <verstretch>0</verstretch>
+                        </sizepolicy>
+                    </property>
+                </widget>
+                <widget class="QLabel" row="0" column="0">
+                    <property name="name">
+                        <cstring>m_diffLabel</cstring>
+                    </property>
+                    <property name="sizePolicy">
+                        <sizepolicy>
+                            <hsizetype>5</hsizetype>
+                            <vsizetype>0</vsizetype>
+                            <horstretch>0</horstretch>
+                            <verstretch>0</verstretch>
+                        </sizepolicy>
+                    </property>
+                    <property name="text">
+                        <string>Use these extra options</string>
+                    </property>
+                </widget>
+                <widget class="KIntNumInput" row="1" column="1">
+                    <property name="name">
+                        <cstring>contextLinesInput</cstring>
+                    </property>
+                    <property name="value">
+                        <number>3</number>
+                    </property>
+                    <property name="minValue">
+                        <number>0</number>
+                    </property>
+                    <property name="maxValue">
+                        <number>65535</number>
+                    </property>
+                </widget>
+                <widget class="QLabel" row="0" column="1">
+                    <property name="name">
+                        <cstring>textLabel1</cstring>
+                    </property>
+                    <property name="sizePolicy">
+                        <sizepolicy>
+                            <hsizetype>5</hsizetype>
+                            <vsizetype>0</vsizetype>
+                            <horstretch>0</horstretch>
+                            <verstretch>0</verstretch>
+                        </sizepolicy>
+                    </property>
+                    <property name="text">
+                        <string>Context lines</string>
+                    </property>
+                </widget>
+            </grid>
         </widget>
     </vbox>
 </widget>
 <tabstops>
-    <tabstop>m_cvsEdit</tabstop>
 </tabstops>
 <includes>
     <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
 <layoutdefaults spacing="6" margin="11"/>
 <layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
+<includehints>
+    <includehint>knuminput.h</includehint>
+    <includehint>knuminput.h</includehint>
+</includehints>
 </UI>
